--- a/index.Rmd
+++ b/index.Rmd
@@ -19,10 +19,10 @@ site: distill::distill_website
 ---
 
 
-# Summary
-We can create great technical websites using program [R](https://www.r-project.org/), [RStudio](https://www.rstudio.com/products/rstudio/download/), the [distill](https://rstudio.github.io/distill/) package, and [GitHub](https://github.com) pages. Furthermore, by using GitHub as our code repository we can ensure that our code is safe and reproducible. Thanks to GitHub, which is a code repository, we can roll back changes if we damage our code. All of these tools: GitHub, RStudio, R and the distill package are free?
+# Synopsis
+We can create great technical websites using program [R](https://www.r-project.org/), [RStudio](https://www.rstudio.com/products/rstudio/download/), the [distill](https://rstudio.github.io/distill/) package, and [GitHub](https://github.com) pages. Furthermore, by using GitHub as our code repository we can ensure that our code is safe and reproducible. Thanks to GitHub, which is a code repository, we can roll back changes if we damage our code. All of these tools: GitHub, RStudio, R and the distill package are free,
 
-There are a variety of ways to create a distill website but this is one that works well for me. Indeed this website was created from the code and the steps given below.
+In the sections below I show how you can create a distill website with nothing more than a basic working knowledge of GitHub, RStudio, and R Markdown formatting. There are various alternate ways of creating a distill website but this is the version that works well for me. Indeed, this website was created from the code and the steps given below.
 
 <br>
 
@@ -169,7 +169,7 @@ Be patient -- it may take 10-15 minutes for your website to appear. Take time ou
 
 # Next steps
 
-You are now in a position to add more content to your website by amending existing R Markdown pages or adding new ones. A great place to start on this journey is <https://rstudio.github.io/distill/> 
+You are now in a position to add more content to your website by amending your existing R Markdown pages (index.Rmd,  which is your home page, or about.Rmd) or adding new ones. A great place to start on this journey is <https://rstudio.github.io/distill/>.
 
 
 ## Acknowledgments {.appendix}
